<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Common -->
    <string name="app_name">NFC App Launcher</string>
    <string name="button_write">Write NFC Tag</string>
    <string name="lock_title">Lock Tag</string>
        
    <!-- Main Activity -->
    <string name="app_header">NFC App Launcher helps you programming your NFC tags to launch an application.\nThis is working with Android 4.0 (Ice Cream Sandwich) and higher.\n\nEnter an application package name:</string>
    <string name="help_toast">Bring your phone close to a NFC tag to overwrite it.</string>
    <string name="menu_item_custom">Custom tag</string>

    <!-- Error messages -->
    <string name="error_success">Tag has been written! </string>
    <string name="error_fail">Write operation Failed! </string>
    
    <!-- Custom Tag fragment Beautiful Widgets -->
    <string name="ctf_lu_bw_head">Create a tag for Beautiful Widgets</string>
    <string name="ctf_lu_bw_activated">Activateds</string>
    <string name="ctf_lu_bw_skin1_head">Add a first skin</string>
    <string name="ctf_lu_bw_skin2_head">Add a second skin</string>
    <string name="ctf_lu_bw_skin3_head">Add a third skin</string>
    <string name="ctf_lu_bw_skin_id">Skin id</string>
    <string name="ctf_lu_bw_skin_name">Skin name</string>
    <string name="ctf_lu_bw_skin_type">Skin type</string>
    <string name="ctf_lu_bw_button_preloaded">Preloaded</string>
    <string name="ctf_lu_bw_select_skin">Select a skin</string>
    
    <!-- Custom Tag fragment Plume-->
    <string name="ctf_lu_plume_head">Create a tag for Plume</string>
    <string name="ctf_lu_plume_profile_name">Profil : </string>

</resources>