<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_header" />

    <EditText
        android:id="@+id/edit_package"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri" />

    <Button
        android:id="@+id/button_write"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_write" />

    <LinearLayout
        android:id="@+id/main_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/main_lock_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lock_title" />

        <CheckBox
            android:id="@+id/main_lock_id_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/main_progress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible" />

</LinearLayout>