<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/ctf_lu_plume_head"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ctf_lu_plume_head" />

        <LinearLayout
            android:id="@+id/ctf_lu_plume_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ctf_lu_plume_profile_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ctf_lu_plume_profile_name" />

            <EditText
                android:id="@+id/ctf_lu_plume_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6.6"
                android:inputType="textUri"
                android:text="JulienDelRio" />

        </LinearLayout>

        <Button
            android:id="@+id/button_write"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_write" />

        <LinearLayout
            android:id="@+id/ctf_lu_bw_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ctf_lu_bw_lock_id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lock_title" />

            <CheckBox
                android:id="@+id/ctf_lu_bw_lock_id_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/main_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />
    </LinearLayout>

</ScrollView>