<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ctf_lu_bw_head" />
        
        <Button 
            android:id="@+id/ctf_lu_bw_button_preloaded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ctf_lu_bw_button_preloaded"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/ctf_lu_bw_skin1_head"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ctf_lu_bw_skin1_head" />

            <LinearLayout
                android:id="@+id/ctf_lu_bw_skin1_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ctf_lu_bw_skin1_head" >

                <TextView
                    android:id="@+id/ctf_lu_bw_skin1_type_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ctf_lu_bw_skin_type" />

                <Spinner
                    android:id="@+id/ctf_lu_bw_skin1_type_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.6"
                    android:entries="@array/typelist"
                    android:inputType="textUri" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ctf_lu_bw_skin1_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ctf_lu_bw_skin1_type" >

                <TextView
                    android:id="@+id/ctf_lu_bw_skin1_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ctf_lu_bw_skin_name" />

                <EditText
                    android:id="@+id/ctf_lu_bw_skin1_name_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.6"
                    android:inputType="textUri"
                    android:text="terrible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ctf_lu_bw_skin1_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ctf_lu_bw_skin1_name" >

                <TextView
                    android:id="@+id/ctf_lu_bw_skin1_id_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ctf_lu_bw_skin_id" />

                <EditText
                    android:id="@+id/ctf_lu_bw_skin1_id_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.6"
                    android:inputType="number"
                    android:text="1325" />
            </LinearLayout>
        </RelativeLayout>

        <!--
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <CheckBox
                android:id="@+id/ctf_lu_bw_skin2_activated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/ctf_lu_bw_skin2_head"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/ctf_lu_bw_skin2_activated"
                android:layout_alignTop="@id/ctf_lu_bw_skin2_activated"
                android:layout_toLeftOf="@+id/ctf_lu_bw_skin2_activated"
                android:gravity="center_vertical"
                android:text="@string/ctf_lu_bw_skin2_head" />

            <LinearLayout
                android:id="@+id/ctf_lu_bw_skin2_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ctf_lu_bw_skin2_activated" >

                <TextView
                    android:id="@+id/ctf_lu_bw_skin2_type_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/ctf_lu_bw_skin_type" />

                <Spinner
                    android:id="@+id/ctf_lu_bw_skin2_type_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.6"
                    android:entries="@array/typelist"
                    android:inputType="textUri" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ctf_lu_bw_skin2_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ctf_lu_bw_skin2_type" >

                <TextView
                    android:id="@+id/ctf_lu_bw_skin2_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/ctf_lu_bw_skin_name" />

                <EditText
                    android:id="@+id/ctf_lu_bw_skin2_name_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.6"
                    android:enabled="false"
                    android:inputType="textUri" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ctf_lu_bw_skin2_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ctf_lu_bw_skin2_name" >

                <TextView
                    android:id="@+id/ctf_lu_bw_skin2_id_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:inputType="number"
                    android:text="@string/ctf_lu_bw_skin_id" />

                <EditText
                    android:id="@+id/ctf_lu_bw_skin2_id_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.6"
                    android:enabled="false"
                    android:inputType="number" />
            </LinearLayout>
        </RelativeLayout>
        -->

        <Button
            android:id="@+id/button_write"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_write" />

        <LinearLayout
            android:id="@+id/ctf_lu_bw_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ctf_lu_bw_lock_id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lock_title" />

            <CheckBox
                android:id="@+id/ctf_lu_bw_lock_id_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/main_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />
    </LinearLayout>

</ScrollView>